package(default_visibility = ["//visibility:public"])


load("@rules_cc//cc:defs.bzl", "cc_binary")



cc_binary(
  name = "1009",
  srcs = ["1009.cpp"]
)


cc_binary(
  name = "1149",
  srcs = ["1149.cpp"]
)

cc_binary(
  name = "1013",
  srcs = ["1013.cpp"]
)

cc_binary(
  name = "1025",
  srcs = ["1025.cpp"]
)


cc_binary(
  name = "1034",
  srcs = ["1034.cpp"]
)

cc_binary(
  name = "10430",
  srcs = ["10430.cpp"]
)

cc_binary(
  name = "4375",
  srcs = ["4375.cpp"]
)




