package(default_visibility = ["//visibility:public"])


load("@rules_cc//cc:defs.bzl", "cc_binary")



cc_binary(
  name = "graph",
  srcs = ["graph.cpp"]
)

cc_binary(
  name ="bst",
  srcs =["bst.cpp"]
)

cc_binary(
  name = "heap",
  srcs =["heap.cpp"]
)

cc_binary(
  name = "ntree",
  srcs = ["ntree.cpp"]
)


cc_binary(
  name = "adjacency_list",
  srcs = ["adjacency_list.cpp"]
)

cc_binary(
  name = "hash_map",
  srcs = ["hash_map.cpp"]
)

cc_binary(
  name = "hash_chaning",
  srcs = ["hash_chaning.cpp"]
)

cc_binary(
  name = "hash_cuckoo",
  srcs = ["hash_cuckoo.cpp"]
)

cc_binary(
  name = "hash_std",
  srcs = ["hash_std.cpp"]
)

cc_binary(
  name ="linear_search",
  srcs = ["linear_search.cpp"]
)

cc_binary(
  name ="merge_sort",
  srcs = ["merge_sort.cpp"]
)

cc_binary(
  name= "quick_sort",
  srcs =["quick_sort.cpp"],
  copts = ["-std=c++17"]

)


cc_binary(
  name= "linear_time_selection",
  srcs =["linear_time_selection.cpp"],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "map_reduce",
  srcs = ["map_reduce.cpp"],
  copts = ["-std=c++17"]
)

# cc_binary(
#   name = "prime_calculator",
#   srcs = glob(
#     ["prime_calculator.cpp","include/**/*.hpp"],
#   ),
#   copts = ["-std=c++17"],
#   deps = [
#     "@boost//:all",
#     "@boost//:iterator",
#     "@boost//:iostreams",
#     "@boost//:functional",
#     "@boost//:config",
#     "@boost//:system",
#   ]
# )

cc_binary(
  name = "compute_waiting_times",
  srcs = [
    "compute_waiting_times.cpp"
  ],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "fractional_knapsack_problem",
  srcs = [
    "fractional_knapsack_problem.cpp"
  ],
  copts = ["-std=c++17"]
)


cc_binary(
  name = "job_scheduling",
  srcs = [
    "job_scheduling.cpp"
  ],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "mst",
  srcs = [
    "mst.cpp"
  ],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "graph_coloring",
  srcs = [
    "graph_coloring.cpp"
  ],
  copts = ["-std=c++17"]
)
cc_binary(
  name = "welsh_powell",
  srcs = [
    "welsh_powell.cpp"
  ],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "graph_bfs",
  srcs = [
    "graph_bfs.cpp"
  ],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "graph_dfs",
  srcs = [
    "graph_dfs.cpp"
  ],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "bipartite_graph",
  srcs = [
    "bipartite_graph.cpp"
  ],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "graph_prime",
  srcs = [
    "graph_prime.cpp"
  ],
  copts = ["-std=c++17"]
)



