package(default_visibility = ["//visibility:public"])


load("@rules_cc//cc:defs.bzl", "cc_binary","cc_test")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc","rust_test")
# boost_deps() will re-download the tarball every time BUILD.boost
# changes, which is frustrating for doing development. Download it
# yourself, uncomment the below and change the path as appropriate
# for a faster iteration cycle on changes.
#
# new_local_repository(
#     name = "boost",
#     build_file = "@com_github_nelhage_rules_boost//:BUILD.boost",
#     path = "/home/nelhage/code/boost_1_71_0/",
# )


cc_binary(
  name = "sort_the_matrix_diagonally",
  srcs = ["sort_the_matrix_diagonally.cpp"]
)


cc_binary(
  name = "rotate_image",
  srcs = ["rotate_image.cpp"]
)


cc_binary(
  name = "numbers_with_same_consective_differences",
  copts = ["-std=c++17"],
  srcs = ["numbers_with_same_consective_differences.cpp"]
)



cc_binary(
  name = "vertical_order_traversal_of_a_binary_tree",
  copts = ["-std=c++17"],
  srcs = ["vertical_order_traversal_of_a_binary_tree.cpp"]
)

rust_binary(
  name = "running_sum_of_1d_array",
  srcs = ["running_sum_of_1d_array.rs"],
  edition = "2018",
  args = []
)

rust_test(
  name = "find_pivot_index",
  srcs = ["find_pivot_index.rs"],
  edition = "2018",
  args = []
)

cc_binary(
  name = "n_ary_tree_level_order_traversal",
  srcs = ["n_ary_tree_level_order_traversal.cpp"]
)

rust_binary(
  name = "binary_tree_pruning",
  srcs = ["binary_tree_pruning.rs"],
  edition="2021"
)

cc_binary(
  name = "construct_string_from_binary_tree",
  srcs = ["construct_string_from_binary_tree.cpp"]
)

cc_binary(
  name = "utf_8_validation",
  srcs = ["utf_8_validation.cpp"]
)

cc_binary(
  name = "binary_tree_inorder_traversal",
  srcs = ["binary_tree_inorder_traversal.cpp"]
)



cc_binary(
  name = "the_number_of_weak",
  srcs = ["the_number_of_weak.cpp"]
)


cc_binary(
  name = "find_original_array_from_doubled_array",
  copts = ["-std=c++17"],
  srcs = ["find_original_array_from_doubled_array.cpp"]
)


cc_binary(
  name = "maximum_performance_of_a_team",
  copts = ["-std=c++17"],
  srcs = ["maximum_performance_of_a_team.cpp"]
)



cc_binary(
  name = "fibonacci_number",
  copts = ["-std=c++17"],
  srcs = ["fibonacci_number.cpp"]
)

cc_binary(
  name = "n_th_tribonacci_number",
  copts = ["-std=c++17"],
  srcs = ["n_th_tribonacci_number.cpp"]
)


cc_test(
  name = "delete_node_in_a_linked_list",
  copts = ["-std=c++17"],
  deps = [
    "@googletest//:gtest_main"
  ],
  srcs = ["delete_node_in_a_linked_list.cpp"]
)


cc_test(
  name = "largest_perimeter_triangle",
  copts = ["-std=c++17"],
  deps = [
    "@googletest//:gtest_main"
  ],
  srcs = ["largest_perimeter_triangle.cpp"]
)



cc_test(
  name = "delete_the_middle_node_of_linked_list",
  copts = ["-std=c++17"],
  deps = [
    "@googletest//:gtest_main"
  ],
  srcs = ["delete_the_middle_node_of_linked_list.cpp"]
)

cc_binary(
  name = "climbing_stairs",
  copts = ["-std=c++17"],
  srcs = ["climbing_stairs.cpp"]
)

cc_binary(
  name = "minimum_difficulty_of_a_job_schedule",
  copts = ["-std=c++17"],
  srcs = ["minimum_difficulty_of_a_job_schedule.cpp"]
)